# plan9-acme-haskell

./: Makefile  cabal.project  include.mk
Network-NineP-Client/: CHANGELOG.md  Makefile  Network-NineP-Client.cabal
Network-NineP-Client/src/Network/NineP/: Client.hs
Network-NineP-Client/test/: Spec.hs
misc/git/: pre-commit
plan9-acme/: CHANGELOG.md  Makefile  plan9-acme.cabal
plan9-acme-examples/: Makefile  NewWindow.hs  plan9-acme-examples.cabal
plan9-acme/src/System/Plan9/: Acme.hs
