cabal-version:      >=1.10
name:               Network-NineP-Client
version:            0.1.0.0
synopsis:           High-level abstraction over 9P protocol for Clients
description:
  A library providing one with a somewhat higher level interface to 9P2000 protocol than existing implementations. Designed to facilitate rapid development of synthetic filesystems.

license:            BSD3
license-file:       LICENSE
author:             Alexander Ben Nasrallah
maintainer:         me@abn.sh
copyright:          2020 © Alexander Ben Nasrallah <me@abn.sh>
category:           Network
build-type:         Simple
extra-source-files: CHANGELOG.md

library
  exposed-modules:  MyLib

  -- other-modules:
  -- other-extensions:
  build-depends:    base ==4.9.*
  hs-source-dirs:   src
  default-language: Haskell2010
