cabal-version:      >=1.10
name:               Network-NineP-Client
version:            0.1.0.0
synopsis:           High-level abstraction over 9P protocol for Clients
description:
  A library providing one with a somewhat higher level interface to 9P2000 protocol than existing implementations. Designed to facilitate rapid development of synthetic filesystems.

license:            BSD3
license-file:       LICENSE
author:             Alexander Ben Nasrallah
maintainer:         me@abn.sh
copyright:          2020 © Alexander Ben Nasrallah <me@abn.sh>
category:           Network
build-type:         Simple
extra-source-files: CHANGELOG.md

flag pedantic
  description: Build with -Wall -Werror
  manual:      True
  default:     False

library
  exposed-modules:  Network.NineP.Client

  -- other-modules:
  -- other-extensions:
  build-depends:
      base        >=4.9 && <5
    , regex-tdfa

  hs-source-dirs:   src
  default-language: Haskell2010

  if flag(pedantic)
    ghc-options: -Wall -Werror

test-suite test-Network-NineP-Client
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   test
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N

  if flag(pedantic)
    ghc-options: -Wall -Werror

  build-depends:
      base                  >=4.7 && <5
    , hspec
    , Network-NineP-Client

  default-language: Haskell2010
