cabal-version:      >=1.10
name:               plan9-acme-examples
version:            0.1.0.0
synopsis:           Demontration of plan9-acme
description:        Examples package to demonstrate plan9-acme
license:            BSD3
license-file:       LICENSE
author:             Alexander Ben Nasrallah
maintainer:         me@abn.sh
copyright:          2020 © Alexander Ben Nasrallah <me@abn.sh>
category:           Example
build-type:         Simple
extra-source-files: CHANGELOG.md

executable new-window
  main-is:          NewWindow.hs
  build-depends:
      base        >=4.9 && <5
    , plan9-acme

  default-language: Haskell2010
